# perceptron-rs

./: .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: api.rs  client.rs  error.rs  lib.rs  media.rs  models.rs  parsing.rs  pointing.rs  prompting.rs  types.rs
src/api/: chat_completions.rs  client.rs  mod.rs  models.rs
src/chat_completions/: client.rs  error.rs  mod.rs  types.rs
tests/: analyze.rs  analyze_image.rs  caption.rs  common.rs  detect.rs  models.rs  ocr.rs  prompting.rs  question.rs  wire.rs
