[package]
name = "perceptron-ai"
version = "0.7.0"
edition = "2024"
description = "Rust SDK for Perceptron models"
license = "MIT"
repository = "https://github.com/perceptron-ai-inc/perceptron-rs"

[features]
schema = ["schemars"]

[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json"] }
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "macros"] }
wiremock = "0.6"
